--- a/vue-element-admin/package.json
+++ b/vue-element-admin/package.json
@@ -61,6 +61,7 @@
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "^1.0.6",
     "husky": "1.3.1",
     "lint-staged": "8.1.5",
     "mockjs": "1.0.1-beta3",
@@ -97,7 +98,7 @@
   "license": "MIT",
   "lint-staged": {
     "src/**/*.{js,vue}": [
-      "eslint --fix",
+      "eslint",
       "git add"
     ]
   },
