--- a/vue-element-admin/.env.development
+++ b/vue-element-admin/.env.development
@@ -4,6 +4,6 @@ ENV = 'development'
 # base api
 # VUE_APP_BASE_API = '/dev-api'
 
- VUE_APP_BASE_API ='http://127.0.0.1:8910/web/api/'
+# VUE_APP_BASE_API ='http://127.0.0.1:8910/web/api/'
 
-# VUE_APP_BASE_API =''
+VUE_APP_BASE_API =''
